--- a/brixo-api/src/main/resources/templates/layouts/main.html
+++ b/brixo-api/src/main/resources/templates/layouts/main.html
@@ -38,11 +38,20 @@
     <!-- Footer fragment -->
     <div th:replace="~{fragments/footer :: footer}"></div>
 
+    <!-- Login/Register modals -->
+    <div th:replace="~{fragments/modals :: loginModal}"></div>
+    <div th:replace="~{fragments/modals :: registerModal}"></div>
+
+    <!-- Cookie consent banner -->
+    <div th:replace="~{fragments/cookie_consent :: cookieConsent}"></div>
+
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script th:src="@{/js/navbar.js}"></script>
     <!-- Analytics tracker -->
     <script th:src="@{/js/brixo-analytics.js}"></script>
+    <script th:src="@{/js/cookie-consent.js}"></script>
+    <script th:src="@{/js/password-toggle.js}"></script>
     <!-- Extra scripts from child pages -->
     <th:block layout:fragment="scripts"></th:block>
 </body>
